# ml_lab3

./: CMakeLists.txt  package.xml
scripts/: .cnn.py.swp  cnn.py  data_augmentation.py
scripts/meses/: train_test.txt
